gccida/g3/loop_iterations
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4016:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4016:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // rdx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4021:1: error: use of undeclared identifier 'induction_1'
induction_1 *v38; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4021:14: error: use of undeclared identifier 'v38'
induction_1 *v38; // rdx 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4038:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4038:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4039:4: error: expected ';' after expression
rtx v56; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4039:5: error: use of undeclared identifier 'v56'
rtx v56; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4041:4: error: expected ';' after expression
rtx v58; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4041:5: error: use of undeclared identifier 'v58'
rtx v58; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4055:4: error: expected ';' after expression
rtx v72; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4055:5: error: use of undeclared identifier 'v72'
rtx v72; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4056:4: error: expected ';' after expression
rtx increment; // [rsp+0h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4056:5: error: use of undeclared identifier 'increment'
rtx increment; // [rsp+0h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4057:4: error: expected ';' after expression
rtx const2; // [rsp+8h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4057:5: error: use of undeclared identifier 'const2'
rtx const2; // [rsp+8h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4058:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv_inc; // [rsp+10h] [rbp-50h] 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4058:14: error: use of undeclared identifier 'biv_inc'
induction_1 *biv_inc; // [rsp+10h] [rbp-50h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/unroll.c:4064:14: error: expected expression
*( ( _OWORD *)aux + 2) = 0LL; 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iterations/src/obj/unroll.o] Error 1
